--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -10,11 +10,14 @@ file( GLOB CURRENT_TARGET_SHADERS
    "${SHADER_SOURCE_DIR}/*.vert"
    "${SHADER_SOURCE_DIR}/*.comp")
    
+source_group( "Common"  FILES ${COMMON_SOURCES} ${COMMON_HEADERS})
 source_group( "Sources" FILES ${CURRENT_TARGET_SOURCES} )
 source_group( "Headers" FILES ${CURRENT_TARGET_HEADERS} )
 source_group( "Shaders" FILES ${CURRENT_TARGET_SHADERS} )
 
 add_executable(${CURRENT_TARGET}
+    ${COMMON_SOURCES}
+    ${COMMON_HEADERS}
     ${CURRENT_TARGET_SOURCES} 
     ${CURRENT_TARGET_HEADERS} 
     ${CURRENT_TARGET_SHADERS})
