Filmic Curve from John Hable. ImGui graphs.

--- a/src/tonemap/CMakeLists.txt
+++ b/src/tonemap/CMakeLists.txt
@@ -3,8 +3,8 @@ set(CURRENT_TARGET tonemap)
 
 set(SHADER_SOURCE_DIR "${ASSETS_DIR}/${CURRENT_TARGET}/shaders")
 
-file( GLOB CURRENT_TARGET_SOURCES "*.c*" )
-file( GLOB CURRENT_TARGET_HEADERS "*.h*" )
+file( GLOB_RECURSE CURRENT_TARGET_SOURCES "*.c*" )
+file( GLOB_RECURSE CURRENT_TARGET_HEADERS "*.h*" )
 file( GLOB CURRENT_TARGET_SHADERS 
    "${SHADER_SOURCE_DIR}/*.frag"
    "${SHADER_SOURCE_DIR}/*.vert"
